--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
       <h1 class="w3-xlarge">PTS6 Portal</h1>
       <h1>Finland</h1>
       <p> Zorg dat je een vpn verbinding hebt met Infralab :)! </p>
+      <p> Voor documentatie betreffende architectuur en endpoints, zie google drive.</p>
+      <p> Wachtwoord voor een applicatie vergeten? Stuur jules kreutzer een postduif.</p>
 
       <div class="w3-padding-32">
         <div class="w3-bar w3-border">
-          <a href="#" class="w3-bar-item w3-button">Administratiesysteem</a>
-          <a href="#" class="w3-bar-item w3-button">Politiesysteem</a>
+          <a href="http://192.168.24.100:4000/" class="w3-bar-item w3-button">Administratiesysteem</a>
+          <a href="http://192.168.24.100:4100/" class="w3-bar-item w3-button">Politiesysteem</a>
           <a href="https://github.com/PTS-S62-E" class="w3-bar-item w3-button">Github</a>
+          <a href="http://192.168.24.100/" class="w3-bar-item w3-button">Jenkins</a>
         </div>
       </div>
     </header>
