--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1>Finland</h1>
       <p> Zorg dat je een vpn verbinding hebt met Infralab :)! </p>
       <p> Voor documentatie betreffende architectuur en endpoints, zie google drive.</p>
-      <p> Wachtwoord voor een applicatie vergeten? Stuur jules kreutzer een postduif.</p>
+      <p> Wachtwoord voor een applicatie vergeten? Stuur Jules Kreutzer een postduif.</p>
 
       <div class="w3-padding-32">
         <div class="w3-bar w3-border">
