--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <div class="w3-padding-32">
         <div class="w3-bar w3-border">
           <a href="http://192.168.24.100:4000/" class="w3-bar-item w3-button">Administratiesysteem</a>
+          <a href="http://192.168.24.100:3000/" class="w3-bar-item w3-button">Monitoringsysteem</a>
           <a href="http://192.168.24.100:4100/" class="w3-bar-item w3-button">Politiesysteem</a>
           <a href="https://github.com/PTS-S62-E" class="w3-bar-item w3-button">Github</a>
           <a href="http://192.168.24.100/" class="w3-bar-item w3-button">Jenkins</a>
